fix horizontal scroll bar display bug

--- a/src/styles/layout/_main.scss
+++ b/src/styles/layout/_main.scss
@@ -3,8 +3,8 @@
   display: flex;
   width: 100%;
   height: 100%;
+  overflow: auto;
   overflow-x: hidden;
-  overflow-y: auto;
   position: relative;
   background: color(bg);
 
@@ -24,7 +24,6 @@
   }
 
   &::-webkit-scrollbar {
-    cursor: none; 
     width: .7rem;
   }
 
